Made some decent improvements (checkpoint 1)

--- a/index.html
+++ b/index.html
@@ -1,12 +1,21 @@
-!<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
-    <head>
-        <title></title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="css/style.css" rel="stylesheet">
-    </head>
-    <body>
-    
-    </body>
+<head>
+    <meta charset="UTF-8">
+    <title>Countdown Timer</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="css/style.css" rel="stylesheet">
+</head>
+<body>
+
+    <div class="center">
+        <h1>Productivity Calculator</h1>
+        <div class="center2"> 
+            <h2 id="countdown">Loading...</h2>
+            
+            <button id="resetButton" type="button">Reset Timer</button>
+        </div>
+    </div>
+    <script src="JS/countdown.js"></script> 
+</body>
 </html>
