--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
             <progress id="timeProgress" value="0" max="100" class="progress-bar"></progress> <!-- Progress Bar -->
             <button id="resetButton" type="button">Reset Timer</button>
         </div>
+        <p><i>"My key to dealing with stress is simple: just stay cool and stay focused." - Ashton Eaton</i></p>
+
     </div>
     
     <script src="JS/countdown.js"></script> 
